# animate-puml

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml
assets/: security.puml  sequence.puml
changelog/: index.html
docs/: api_docs.md
search/: search_index.json
src/animate_puml/: app.py
tests/: workflow_steps_test.py
